# lcs-diff-rs

./: Cargo.toml
.github/workflows/: ci.yaml
benches/: benches.rs
examples/: example.rs
src/: lib.rs
